src/objects/Conference_Bridge__c.object
<CustomObject>
    <fields>
        <fullName>Bridge_Name__c</fullName>
        <description>The name of the conference bridge.  Must be unique.</description>
        <inlineHelpText>The name of the conference bridge.  Must be unique.</inlineHelpText>
        <label>Bridge Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cost_per_Minute__c</fullName>
        <defaultValue>0.01</defaultValue>
        <inlineHelpText>Cost per minute for attendees</inlineHelpText>
        <label>Cost per Minute</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Cost_per_Call__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>The cost of a call, regardless of the number of callers and the duration</inlineHelpText>
        <label>Fixed Cost per Call</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hangup_After_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines if the call should end immediately after the welcome message is played.  Useful for postponing meetings.</inlineHelpText>
        <label>Hangup After Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Host_Number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The host number</inlineHelpText>
        <label>Host Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <inlineHelpText>The owner of the bridge line.  Not necessarily a Salesforce user.</inlineHelpText>
        <label>Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twilio_Number__c</fullName>
        <externalId>true</externalId>
        <label>Twilio Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Welcome_Message__c</fullName>
        <defaultValue>&apos;Welcome to the call.&apos;</defaultValue>
        <inlineHelpText>The message played to callers when they arrive on the bridge prior to being put on hold</inlineHelpText>
        <label>Welcome Message</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Conference Bridge</label>
    <nameField>
        <label>Conference Bridge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conference Bridges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>